# mnemoir-provenance

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  PUBLIC_FILE_MANIFEST.json  README.md  SECURITY.md  SOURCE_PROVENANCE.json  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  publish.yml
assets/diagrams/: architecture.mmd
assets/screenshots/: README.md  manifest.json
docs/: index.md
docs/concepts/: adaptive-thermal-scoring.md  architecture.md  bounded-autonomy.md  data-model.md  memory-lifecycle-and-curation.md  mental-model.md  multi-agent-council-records.md  overflow-trim-and-writeback.md  retrieval-and-context-packing.md  scopes-privacy-and-authority.md  source-grounding-and-provenance.md  source-health-and-degradation.md
docs/contributing/: architecture-decisions.md  development-setup.md  documentation-style.md  public-projection-workflow.md  release-process.md  tests-and-fixtures.md
docs/getting-started/: configuration.md  first-memory-lifecycle.md  first-source-and-recall.md  installation.md  quickstart.md
docs/guides/: curate-review-and-revise.md  ingest-controlled-sources.md  integrate-cli-json.md  integrate-generic-harness.md  integrate-hermes.md  (+8 more)
scripts/: verify_candidate.py
tests/: conftest.py  test_public_capabilities.py  test_public_core.py  test_public_ingest_security.py  test_public_integrations.py  test_public_onboarding.py  test_public_overflow.py  test_public_ui.py  test_public_visual_remediation.py
(+84 files in other folders)
