[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mnemoir-provenance"
version = "0.2.0-rc.1"
description = "Source-grounded memory for agents that learn over time."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Mnemoir Provenance contributors"}]
keywords = ["agent-memory", "local-first", "provenance", "sqlite", "ai-agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/sayyied/mnemoir-provenance"
Repository = "https://github.com/sayyied/mnemoir-provenance"
Issues = "https://github.com/sayyied/mnemoir-provenance/issues"
Security = "https://github.com/sayyied/mnemoir-provenance/blob/main/SECURITY.md"

[project.scripts]
"mnemoir" = "mnemoir_provenance.cli:main"

[project.optional-dependencies]
test = ["pytest>=8,<9"]
release = ["build>=1.2,<2", "pytest>=8,<9"]
external-benchmark = ["beir>=2.2", "mteb>=2.15", "ir_datasets>=0.5.11"]
hermes = ["hermes-agent>=0.18.2"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"mnemoir_provenance" = ["resources/*.sql", "hermes_plugin/*.py", "hermes_plugin/*.yaml", "ui/*.html", "ui/*.css", "ui/*.js"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
